<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_12"
        android:paddingHorizontal="@dimen/_19sdp"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/allow_clap_to_find_your_phone_to_access_audio_files"
            android:textColor="#3C3C3C"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_deny"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/bg_radius_100"
            android:backgroundTint="#F0F0F0"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/deny"
            android:textAllCaps="true"
            android:textColor="#828287"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toStartOf="@id/btn_allow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />

        <TextView
            android:id="@+id/btn_allow"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/bg_radius_gradient"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/allow"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_deny"
            app:layout_constraintTop_toTopOf="@id/btn_deny" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>